2006-09-04  Brian Cameron  <brian.cameron@sun.com>

        * Release 2.16.0:
        * NEWS: Updated.
        * configure.ac: Update to new release version.

2006-09-04  Brian Cameron  <brian.cameron@sun.com>

	* docs/C/gdm.xml, docs/es/gdm.xml, docs/uk/gdm.xml:
	  Accidently putback docs fix after freeze.  Backing
	  out.

2006-09-04  Brian Cameron  <brian.cameron@sun.com>

        * Release 2.16.0:
        * NEWS: Updated.
        * configure.ac: Update to new release version.

2006-08-23  Brian Cameron  <brian.cameron@sun.com>

	* daemon/gdm.c: Make the SDTLOGIN logic a bit smarter and
	  use g_unlink() instead of unlink().

2006-08-23  Brian Cameron  <brian.cameron@sun.com>

	* daemon/gdm.h: Corrections to comments.

2006-08-21  Brian Cameron  <brian.cameron@sun.com>

        * Release 2.15.10:
        * NEWS: Updated.
        * configure.ac: Update to new release version.

2006-08-15  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.ac: Fix intltool req.
	* po/nb.po: Update this.

2006-08-08  Ray Strode <rstrode@redhat.com>

	* gui/gdmwm.[ch] (gdm_wm_center_cursor): new function
	that centers mouse pointer on one head

	* gui/greeter/greeter.c (main): center cursor on main
	xinerama head on startup (looks nicer and as a side
	effect should fix bug 327530)

2006-08-07  Brian Cameron  <brian.cameron@sun.com>

        * Release 2.15.9:
        * NEWS: Updated.
        * configure.ac: Update to new release version.

2006-08-03  Brian Cameron  <brian.cameron@sun.com>

	* daemon/slave.c: Remove calls to syslog/malloc that are called
	  from inside signal handlers, since they are not safe.  Patch
	  provided by Ray Strode <rstrode@redhat.com>.

2006-08-03  Ray Strode <rstrode@redhat.com>

	* configure.ac: look for /usr/bin/Xorg when searching for
	  X servers (bug 349836).

2006-08-03  Brian Cameron  <brian.cameron@sun.com>

	* config/gdm.conf.in, config/gdm.conf-custom: Improved comments
	  to make gdm.conf/custom.conf more clear.
