@@ -1,3 +1,12 @@
+2006-09-11  Brian Cameron  <brian.cameron@sun.com>
+
+	* daemon/gdm.c: Move call to get GDM_KEY_SYSTEM_MENU
+	  until after authentication check.  Fixes bug
+	  #352838.  Patch by Frederic Crozat
+	  <fcrozat@mandriva.com>.
+	* docs/C/gdm.xml: Make gdmdynamic section a bit more
+	  clear.
+
 2006-09-04  Brian Cameron  <brian.cameron@sun.com>
 
         * Release 2.16.0:
